--- a/css/_global.scss
+++ b/css/_global.scss
@@ -21,10 +21,21 @@ html {
 ul {
 	list-style: none;
 	padding: 0;
-	margin: 0;
+	margin: 2rem 0;
 
 	li {
 		text-decoration: none;
+		margin-bottom: 1rem;
+		&::before {
+			content: '';
+			display: inline-block;
+			width: 5px;
+			height: 5px;
+			border-radius: 50%;
+			background: $primary;
+			vertical-align: middle;
+			margin-right: 1rem;
+		}
 	}
 }
 
@@ -87,6 +98,11 @@ a {
 }
 
 // Text color
+.text-primary {
+	color: $primary;
+}
+
+
 .text-secondary {
 	color: $secondary;
 }
@@ -139,6 +155,10 @@ a {
 	align-items: center;
 }
 
+.align-items-start {
+	align-items: flex-start;
+}
+
 .v-align-middle {
 	vertical-align: middle;
 }
@@ -151,3 +171,4 @@ a {
 .p-absolute {
 	position: absolute !important;
 }
+
