--- a/css/main.scss
+++ b/css/main.scss
@@ -13,4 +13,169 @@ main {
         background: $secondary;
         padding: 1rem 2rem;
     }
+
+    .row {
+        margin-top: 3rem;
+        .content {
+            width: 50%;
+            font-family: 'Roboto Medium';
+
+        }
+
+        .image-wrap {
+            width: 50%;
+            padding-left: 3rem;
+
+            img {
+                width: 100%;
+                display: block;
+                border-radius: 2rem;
+            }
+        }
+    }
 }
+
+// Section 2
+.section-2 {
+    margin-top:10rem;
+    
+        .tab {
+            position: relative;
+            background: $primary;
+            font-family: 'Roboto Medium';
+            letter-spacing: .1rem;
+            display: inline-block;
+            cursor: pointer;
+            transition: all .3s ease-in;
+            // border-bottom: 50px solid $primary;
+            // border-right: 40px solid transparent;
+            // height: 0;
+            padding: 2rem 5rem 2rem 2rem;
+
+            // span {
+            //     position: absolute;
+            //     display: inline-block;
+            //     width: max-content;
+            //     left: 35%;
+            //     top: 15px;
+            //     //transform: translate(-50%,-50%);
+                
+            // }
+
+            &::after {
+                content: '';
+                  width: 0;
+                    height: 0;
+                    border-bottom: 61px solid $gray;
+                    border-right: 30px solid transparent;
+                position: absolute;
+                transform: rotate(180deg);
+                right:0;
+                top: 0;
+              }
+
+            &:hover {
+                color: $white;
+               background: $secondary;
+            }
+        }
+
+    .dropdown-wrap {
+        padding: 5rem;
+        background: $light-gray;
+        transition: all .3s ease-in-out;
+        
+        h2 {
+            margin-bottom: 2rem;
+        }
+
+        h3 {
+            margin: 2rem 0;
+        }
+
+        .data-group {
+            display: none;
+        }
+    }
+
+    .dropdown-wrap .image-wrap {
+        img {
+            width: 50%;
+            padding: 1.5rem;
+        }
+    }
+
+    .table-wrap {
+        margin-top: 4.5rem;
+    }
+}
+
+//Hide Radio
+input[type=radio] {
+    display: none;
+}
+
+
+
+input[type=radio]#tabOne:checked ~ .dropdown-wrap {
+    #dataOne {
+        display: block;
+    }
+}
+
+input[type=radio]#tabTwo:checked ~ .dropdown-wrap {
+    #dataTwo {
+        display: block;
+    }
+}
+
+input[type=radio]#tabThree:checked ~ .dropdown-wrap {
+    #dataThree {
+        display: block;
+    }
+}
+
+input[type=radio]#tabOne:checked ~ #labelOne {
+    background: $secondary;
+   color: $white;
+}
+
+input[type=radio]#tabTwo:checked ~ #labelTwo {
+    background: $secondary;
+    color: $white;
+}
+
+input[type=radio]#tabThree:checked ~ #labelThree {
+    background: $secondary;
+    color: $white;
+}
+
+// Table
+table, th, td {
+    padding: 2rem;
+  }
+  
+  table {
+    border-collapse: collapse;
+    width:100%;
+    border-radius: 1rem;
+    overflow: hidden;
+
+    thead {
+        background: $primary;
+        color: $white;
+    }
+
+    tbody {
+        th, td {
+            border: 1px solid $gray;
+            color: lighten($primary, 20%);
+            background: $white;
+            font-family: 'Roboto Medium';
+        }
+    }
+  }
+  
+
+
+
