--- a/css/_utilities.scss
+++ b/css/_utilities.scss
@@ -30,9 +30,10 @@
 $white: #ffffff;
 $black: #282828;
 $light-gray: #e6e6e6;
+$light-blue: #edeef0;
 $gray: #c3c7d0;
 $primary: #061e57;
-$secondary: #d9212d;
+$secondary: #be1b26;
 
 
 // Mixins
