--- a/css/_nav.scss
+++ b/css/_nav.scss
@@ -1,17 +1,97 @@
 // Navbar----------------------------------
 header {
     background: $white;
+
     .topnav {
         padding: 2.8rem 0;
     }
 
     .navbar {
-        padding: 2.8rem 0;
         background: linear-gradient(50deg, rgba(2, 0, 36, 1) 0%, rgba(28, 61, 143, 1) 0%, rgba(6, 30, 90, 1) 100%);
 
-        .nav-link {
-            font-size: 1.8rem;
-            padding-right: 2.8rem;
+        .nav-wrap {
+            display: flex;
+            align-items: center;
+
+            .list-item {
+                margin-right: 2.8rem;
+                margin-bottom: 0;
+
+                svg {
+                    display: inline-block;
+                    vertical-align: middle;
+                    margin-top: -3px;
+                    transition: all .3s;
+                   
+                    path {
+                        transition: all .3s;
+                    }
+                }
+            }
+
+            .nav-link {
+                padding: 2.8rem 0;
+                display: inline-block;
+                font-size: 1.8rem;
+                vertical-align: middle;
+            }
+
+            .dropdown {
+                text-align: center;
+                background: $white;
+                position: absolute;
+                top: 79px;
+                left: calc(50%);
+                transform: translateX(-50%);
+                // visibility: hidden;
+                // opacity: 0;
+                max-height: 0;
+                overflow: hidden;
+                transition: all 0.45s ease-in-out;
+                width: 690px;
+                z-index: 12;
+                box-shadow: 0 .5rem 1rem rgba(0,0,0,.15);
+
+                ul.dropdown-list {
+                    width: calc(100% / 3);
+
+                    &:nth-child(1), &:nth-child(2) {
+                        border-right: 1px solid $gray;
+                    }
+                }
+
+                .nav-dropdown-item a {
+                    text-transform: uppercase;
+                    font-family: 'Roboto Bold';
+                    color: $black;
+                    letter-spacing: .05em;
+                    padding: 15px 0px;
+                    display: inline-block;
+                    width: 100%;
+                    transition: color .3s ease;
+                }
+
+                .line-break {
+                    width: 100%;
+                    height: 1px;
+                    background: $gray;
+                }
+            }
+
+            li.has-dropdown:hover {
+                .dropdown {
+                    max-height: 999px;
+                }
+
+                svg {
+                    transform: rotate(180deg);
+                }
+
+                svg path {
+                    fill: $secondary;
+                    stroke: $secondary;
+                }
+            }
         }
     }
 }
