--- a/css/main.scss
+++ b/css/main.scss
@@ -14,6 +14,28 @@ main {
         padding: 1rem 2rem;
     }
 
+    ul {
+        list-style: none;
+        padding: 0;
+        margin: 2rem 0;
+    
+        li {
+            text-decoration: none;
+            margin-bottom: 1rem;
+    
+            &::before {
+                content: '';
+                display: inline-block;
+                width: 5px;
+                height: 5px;
+                border-radius: 50%;
+                background: $primary;
+                vertical-align: middle;
+                margin-right: 1rem;
+            }
+        }
+    }
+
     .row {
         margin-top: 3rem;
         .content {
@@ -82,7 +104,7 @@ main {
 
     .dropdown-wrap {
         padding: 5rem;
-        background: $light-gray;
+        background: $light-blue;
         transition: all .3s ease-in-out;
         
         h2 {
@@ -160,6 +182,7 @@ table, th, td {
     width:100%;
     border-radius: 1rem;
     overflow: hidden;
+    text-align: left;
 
     thead {
         background: $primary;
@@ -176,6 +199,34 @@ table, th, td {
     }
   }
   
+
+// Footer
+footer {
+    .footer {
+        font-size: 1.8rem;
+        background: $white;
+        padding: 3.5rem 0; 
+
+        a {
+            display: block;
+        }
+
+        .col:first-child {
+            padding-right: 4rem;
+            border-right: 1px solid $light-gray;
+        }
+
+        .col:nth-child(2) {
+            padding-left: 4rem;
+            border-left: 1px solid $light-gray;
+        }
+    }
+
+    .copy-right {
+        padding: 3.2rem;
+        background: $secondary;
+    }
+}
 
 
 
