--- a/css/_nav.scss
+++ b/css/_nav.scss
@@ -14,17 +14,27 @@ header {
             align-items: center;
 
             .list-item {
-                margin-right: 2.8rem;
-                margin-bottom: 0;
+                //margin-right: 2.8rem;
+                padding: 0 2rem;
+                cursor: pointer;
+                transition: all .3s ease-in;
 
                 svg {
                     display: inline-block;
                     vertical-align: middle;
                     margin-top: -3px;
                     transition: all .3s;
-                   
+
                     path {
                         transition: all .3s;
+                    }
+                }
+
+                &:hover {
+                    background: $secondary;
+
+                    a {
+                        color: $white;
                     }
                 }
             }
@@ -50,13 +60,25 @@ header {
                 transition: all 0.45s ease-in-out;
                 width: 690px;
                 z-index: 12;
-                box-shadow: 0 .5rem 1rem rgba(0,0,0,.15);
+                box-shadow: 0 .5rem 1rem rgba(0, 0, 0, .15);
 
                 ul.dropdown-list {
                     width: calc(100% / 3);
 
-                    &:nth-child(1), &:nth-child(2) {
+                    &:nth-child(1),
+                    &:nth-child(2) {
                         border-right: 1px solid $gray;
+                    }
+                }
+
+                .nav-dropdown-item {
+                    transition: all .3s ease;
+                }
+
+                .nav-dropdown-item:hover {
+                    background: $secondary;
+                    a {
+                        color: $white;
                     }
                 }
 
@@ -85,11 +107,6 @@ header {
 
                 svg {
                     transform: rotate(180deg);
-                }
-
-                svg path {
-                    fill: $secondary;
-                    stroke: $secondary;
                 }
             }
         }
