--- a/css/_utilities.scss
+++ b/css/_utilities.scss
@@ -10,8 +10,8 @@
 
 @font-face {
 	font-family: 'Roboto Bold';
-	src: url('/fonts/Roboto-Bold.woff2') format('woff2'),
-		url('/fonts/Roboto-Bold.woff') format('woff');
+	src: url('fonts/Roboto-Bold.woff2') format('woff2'),
+		url('fonts/Roboto-Bold.woff') format('woff');
 	font-weight: bold;
 	font-style: normal;
 	font-display: swap;
@@ -19,8 +19,8 @@
 
 @font-face {
 	font-family: 'Roboto Regular';
-	src: url('/fonts/Roboto-Regular.woff2') format('woff2'),
-		url('/fonts/Roboto-Regular.woff') format('woff');
+	src: url('fonts/Roboto-Regular.woff2') format('woff2'),
+		url('fonts/Roboto-Regular.woff') format('woff');
 	font-weight: normal;
 	font-style: normal;
 	font-display: swap;
@@ -55,4 +55,3 @@ $secondary: #be1b26;
 	background-repeat: no-repeat;
 	background-position: $position;
 }
-
