revert image path back

--- a/css/_utilities.scss
+++ b/css/_utilities.scss
@@ -1,8 +1,8 @@
 // Font
 @font-face {
 	font-family: 'Roboto Medium';
-	src: url('/ThomsenCutUp/fonts/Roboto-Medium.woff2') format('woff2'),
-		url('/ThomsenCutUp/fonts/Roboto-Medium.woff') format('woff');
+	src: url('/fonts/Roboto-Medium.woff2') format('woff2'),
+		url('/fonts/Roboto-Medium.woff') format('woff');
 	font-weight: 500;
 	font-style: normal;
 	font-display: swap;
@@ -10,8 +10,8 @@
 
 @font-face {
 	font-family: 'Roboto Bold';
-	src: url('/ThomsenCutUp/fonts/Roboto-Bold.woff2') format('woff2'),
-		url('/ThomsenCutUp/fonts/Roboto-Bold.woff') format('woff');
+	src: url('/fonts/Roboto-Bold.woff2') format('woff2'),
+		url('/fonts/Roboto-Bold.woff') format('woff');
 	font-weight: bold;
 	font-style: normal;
 	font-display: swap;
@@ -19,8 +19,8 @@
 
 @font-face {
 	font-family: 'Roboto Regular';
-	src: url('/ThomsenCutUp/fonts/Roboto-Regular.woff2') format('woff2'),
-		url('/ThomsenCutUp/fonts/Roboto-Regular.woff') format('woff');
+	src: url('/fonts/Roboto-Regular.woff2') format('woff2'),
+		url('/fonts/Roboto-Regular.woff') format('woff');
 	font-weight: normal;
 	font-style: normal;
 	font-display: swap;
