--- a/css/main.css
+++ b/css/main.css
@@ -370,21 +370,21 @@ html {
 
 @font-face {
   font-family: "Roboto Medium";
-  src: url("/ThomsenCutUp/fonts/Roboto-Medium.woff2") format("woff2"), url("/ThomsenCutUp/fonts/Roboto-Medium.woff") format("woff");
+  src: url("/fonts/Roboto-Medium.woff2") format("woff2"), url("/fonts/Roboto-Medium.woff") format("woff");
   font-weight: 500;
   font-style: normal;
   font-display: swap;
 }
 @font-face {
   font-family: "Roboto Bold";
-  src: url("/ThomsenCutUp/fonts/Roboto-Bold.woff2") format("woff2"), url("/ThomsenCutUp/fonts/Roboto-Bold.woff") format("woff");
+  src: url("/fonts/Roboto-Bold.woff2") format("woff2"), url("/fonts/Roboto-Bold.woff") format("woff");
   font-weight: bold;
   font-style: normal;
   font-display: swap;
 }
 @font-face {
   font-family: "Roboto Regular";
-  src: url("/ThomsenCutUp/fonts/Roboto-Regular.woff2") format("woff2"), url("/ThomsenCutUp/fonts/Roboto-Regular.woff") format("woff");
+  src: url("/fonts/Roboto-Regular.woff2") format("woff2"), url("/fonts/Roboto-Regular.woff") format("woff");
   font-weight: normal;
   font-style: normal;
   font-display: swap;
