--- a/css/_utilities.scss
+++ b/css/_utilities.scss
@@ -1,30 +1,5 @@
 // Font
-@font-face {
-	font-family: 'Roboto Medium';
-	src: url('../fonts/Roboto-Medium.woff2') format('woff2'),
-		url('../fonts/Roboto-Medium.woff') format('woff');
-	font-weight: 500;
-	font-style: normal;
-	font-display: swap;
-}
-
-@font-face {
-	font-family: 'Roboto Bold';
-	src: url('../fonts/Roboto-Bold.woff2') format('woff2'),
-		url('../fonts/Roboto-Bold.woff') format('woff');
-	font-weight: bold;
-	font-style: normal;
-	font-display: swap;
-}
-
-@font-face {
-	font-family: 'Roboto Regular';
-	src: url('../fonts/Roboto-Regular.woff2') format('woff2'),
-		url('../fonts/Roboto-Regular.woff') format('woff');
-	font-weight: normal;
-	font-style: normal;
-	font-display: swap;
-}
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap');
 
 // Variables
 $white: #ffffff;
