--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,4 @@
+@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap");
 html {
   line-height: 1.15;
   /* 1 */
@@ -74,8 +75,7 @@ abbr[title] {
   /* 1 */
   text-decoration: underline;
   /* 2 */
-  -webkit-text-decoration: underline dotted;
-          text-decoration: underline dotted;
+  text-decoration: underline dotted;
   /* 2 */
 }
 
@@ -368,27 +368,6 @@ html {
   clear: both;
 }
 
-@font-face {
-  font-family: "Roboto Medium";
-  src: url("../fonts/Roboto-Medium.woff2") format("woff2"), url("../fonts/Roboto-Medium.woff") format("woff");
-  font-weight: 500;
-  font-style: normal;
-  font-display: swap;
-}
-@font-face {
-  font-family: "Roboto Bold";
-  src: url("../fonts/Roboto-Bold.woff2") format("woff2"), url("../fonts/Roboto-Bold.woff") format("woff");
-  font-weight: bold;
-  font-style: normal;
-  font-display: swap;
-}
-@font-face {
-  font-family: "Roboto Regular";
-  src: url("../fonts/Roboto-Regular.woff2") format("woff2"), url("../fonts/Roboto-Regular.woff") format("woff");
-  font-weight: normal;
-  font-style: normal;
-  font-display: swap;
-}
 *,
 *:before,
 *:after {
@@ -396,7 +375,8 @@ html {
 }
 
 body {
-  font-family: "Roboto Regular";
+  font-family: "Roboto", sans-serif;
+  font-weight: 400;
   font-size: 1.6rem;
   letter-spacing: 0;
   line-height: 1.3;
@@ -491,7 +471,8 @@ a:active {
 }
 
 .font-bold {
-  font-family: "Roboto Bold";
+  font-family: "Roboto", sans-serif;
+  font-weight: 700;
 }
 
 .d-none {
@@ -664,7 +645,8 @@ main {
 }
 .section-1 .row .content {
   width: 50%;
-  font-family: "Roboto Medium";
+  font-family: "Roboto", sans-serif;
+  font-weight: 500;
 }
 .section-1 .row .image-wrap {
   width: 50%;
@@ -682,7 +664,8 @@ main {
 .section-2 .tab {
   position: relative;
   background: #061e57;
-  font-family: "Roboto Medium";
+  font-family: "Roboto", sans-serif;
+  font-weight: 500;
   letter-spacing: 0.1rem;
   display: inline-block;
   cursor: pointer;
@@ -757,7 +740,9 @@ input[type=radio]#tabThree:checked ~ #labelThree {
   color: #ffffff;
 }
 
-table, th, td {
+table,
+th,
+td {
   padding: 2rem;
 }
 
@@ -772,11 +757,13 @@ table thead {
   background: #061e57;
   color: #ffffff;
 }
-table tbody th, table tbody td {
+table tbody th,
+table tbody td {
   border: 1px solid #c3c7d0;
   color: #0d3fb6;
   background: #ffffff;
-  font-family: "Roboto Medium";
+  font-family: "Roboto", sans-serif;
+  font-weight: 500;
 }
 
 footer .footer {
