--- a/css/_nav.scss
+++ b/css/_nav.scss
@@ -77,6 +77,7 @@ header {
 
                 .nav-dropdown-item:hover {
                     background: $secondary;
+
                     a {
                         color: $white;
                     }
@@ -84,7 +85,8 @@ header {
 
                 .nav-dropdown-item a {
                     text-transform: uppercase;
-                    font-family: 'Roboto Bold';
+                    font-family: 'Roboto';
+                    font-weight: 700;
                     color: $black;
                     letter-spacing: .05em;
                     padding: 15px 0px;
